syntax = "proto3";

option go_package = "./";

service Authenticator {
    rpc RequestPQ (PQRequest) returns (PQResponse) {}
    rpc RequestDHParams (DHRequest) returns (DHResponse) {}
}

message PQRequest {
    string nonce = 1; // max_width -> 20 
    int64 message_id = 2; // even and greater than zero
}

message PQResponse {
    string nonce = 1; // the exact nonce from the clients request
    string server_nonce = 2; // max_width -> 20
    int64 message_id = 3; // odd and greater than zero
    int64 p = 4; // prime number
    int64 g = 5; // primitive root modulo of p
}

message DHRequest {
    string nonce = 1; // same as req_pq 
    string server_nonce = 2; // same as req_pq 
    int64 message_id = 3; // even and greater than the pq req id
    int64 a = 4; // public key generated by client
}

message DHResponse {
    string nonce = 1; // the exact nonce from the clients request
    string server_nonce = 2; // generated in the previous step
    int64 message_id = 3; // odd and greater than zero
    int64 b = 4; //public key generated by server
}